[package]
name = "math_expr"
version = "0.1.0"
authors = ["Sean Hellum <seanhellum45@gmail.com>"]
edition = "2018"

[build-dependencies.lalrpop]
version = "0.18.1"
features = ["lexer"]

[dependencies]
lalrpop-util = "0.18.1" # For the parser
synterm = { git = "https://github.com/JesterOrNot/SynTerm.git" } # For the awesome REPL
logos = "0.11.4" # A Requirement of synterm as it makes *heavy* use of macros

[[test]]
name = "unit"
path = "tests/test.rs"
